[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-triage-env"
version = "1.0.0"
description = "OpenEnv environment for customer support ticket triage and prioritisation"
authors = [{name = "Prasun Shrivastav", email = "prasun@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "openai>=1.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
inference = "inference:main"
server = "server.app:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = [".venv*", "__pycache__*"]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/PrasunPragya/openenvfinal"
